removes textured backgrounds because of issues related to automatic dark mode

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -1,10 +1,7 @@
 @media (prefers-color-scheme: dark) {
 
     /* Background colors */
-    html { 
-        background: #333; 
-        background-image: url(../img/bg-texture-dark.jpg);
-    }
+    html { background: #333; }
     
     /* Text colors */
     html, 
